--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
     --color-white: white;
     --color-ligth: #ababab;
     --color-purple: #2533b4;
-    --color-pink: #eb0464;
+    --color-pink: #b42561;
 }
 
 body{
