--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ body{
 }
 
 .clock{
+    margin-top: 200px;
     display: flex;
     gap: 50px;
 
@@ -50,4 +51,67 @@ strong{
 }
 
 
+/*Manipulando rodapé*/
+.rodape{
+    opacity: 0.5;
+    display: flex;
+    margin-top: 100px;
+    justify-content: center;
+    align-items: center;
+    background-color: black;
+}
+
+.box2{
+    display: flex;
+    flex-direction: column;
+    color: white;
+    width: 100%;
+    height: 100vh;
+    max-height: 200px;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.contatinho{
+    color: #918c8c;
+    text-align: justify;
+    width: 100%;
+}
+.contatinho span{
+    color: white;
+    font-size: 25px;
+}
+.contatinho p{
+    text-align: justify;
+    font-size: 20px;
+}
+
+.center{
+    font-size: 18px;
+    color: #fff;
+    display: flex;
+    
+    align-items: center;
+    width: 100%;
+}
+
+.center a{
+    text-decoration: none;
+    color: #9e67c9;
+}
+
+.social{
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;  
+}
+
+.social img{
+    cursor: pointer;
+    width: 30px;
+    height: 30px;
+    margin-left: 10px ;
+}
 
